App2/src/objects/Train_on_Route__c.object
<CustomObject>
    
    <fields>
        <fullName>Occupied_Until__c</fullName>
        <label>Occupied Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Trains on Routes</relationshipLabel>
        <relationshipName>Trains_on_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Train__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Train</label>
        <referenceTo>Train__c</referenceTo>
        <relationshipLabel>Trains on Routes</relationshipLabel>
        <relationshipName>Trains_on_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Train on Route</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trains on Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>